--- a/TicTacToe/Managers/Localizations/Localizable.xcstrings
+++ b/TicTacToe/Managers/Localizations/Localizable.xcstrings
@@ -1,8 +1,32 @@
 {
   "sourceLanguage" : "en",
   "strings" : {
+    "" : {
+
+    },
+    "%@ победил!" : {
+
+    },
+    "GameView" : {
+
+    },
+    "Hello, World!" : {
+
+    },
     "Key" : {
       "extractionState" : "manual"
+    },
+    "O" : {
+
+    },
+    "Н" : {
+
+    },
+    "Начать заново" : {
+
+    },
+    "Текущий игрок: %@" : {
+
     }
   },
   "version" : "1.0"
