--- a/TicTacToe/Managers/Localizations/Localizable.xcstrings
+++ b/TicTacToe/Managers/Localizations/Localizable.xcstrings
@@ -10,16 +10,28 @@
     "%lld" : {
 
     },
-    "GameView" : {
+    "Choose" : {
 
     },
-    "Hello, World!" : {
+    "GameView" : {
 
     },
     "Key" : {
       "extractionState" : "manual"
     },
     "O" : {
+
+    },
+    "Picked" : {
+
+    },
+    "Select Time" : {
+
+    },
+    "Time for game" : {
+
+    },
+    "Turn on the time" : {
 
     },
     "X" : {
