перенес выбор крестика и нолика в settingsView

--- a/TicTacToe/Managers/Localizations/Localizable.xcstrings
+++ b/TicTacToe/Managers/Localizations/Localizable.xcstrings
@@ -13,7 +13,19 @@
     "Key" : {
       "extractionState" : "manual"
     },
+    "Next" : {
+
+    },
+    "OK" : {
+
+    },
     "Player" : {
+
+    },
+    "Please enter your name" : {
+
+    },
+    "Select Game" : {
 
     },
     "Time" : {
