Add translate to localazible

--- a/TicTacToe/Managers/Localizations/Localizable.xcstrings
+++ b/TicTacToe/Managers/Localizations/Localizable.xcstrings
@@ -1,15 +1,46 @@
 {
   "sourceLanguage" : "en",
   "strings" : {
-    "" : {
-
-    },
     "%lld" : {
       "localizations" : {
         "ru" : {
           "stringUnit" : {
             "state" : "translated",
             "value" : "%lld"
+          }
+        }
+      }
+    },
+    "AI" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "AI"
+          }
+        },
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "ИИ"
+          }
+        }
+      }
+    },
+    "Back" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Back"
+          }
+        },
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Назад"
           }
         }
       }
@@ -27,6 +58,57 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Выберите"
+          }
+        }
+      }
+    },
+    "Difficulty:" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Difficulty"
+          }
+        },
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Сложность"
+          }
+        }
+      }
+    },
+    "Draw a grid with three rows and three columns, creating nine squares in total." : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Draw a grid with three rows and three columns, creating nine squares in total."
+          }
+        },
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Нарисуйте сетку из трёх рядов и трёх столбцов, всего девять клеток."
+          }
+        }
+      }
+    },
+    "Draw!" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Draw!"
+          }
+        },
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Ничья!"
           }
         }
       }
@@ -65,6 +147,40 @@
         }
       }
     },
+    "Language:" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Language"
+          }
+        },
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Язык"
+          }
+        }
+      }
+    },
+    "Leaderboard" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Leaderboard"
+          }
+        },
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Таблица лидеров"
+          }
+        }
+      }
+    },
     "Let's play" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -77,7 +193,24 @@
         "ru" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Сыграем?"
+            "value" : "Играть"
+          }
+        }
+      }
+    },
+    "Music:" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Music"
+          }
+        },
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Музыка"
           }
         }
       }
@@ -95,6 +228,23 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Следующий"
+          }
+        }
+      }
+    },
+    "No game history" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "No game history"
+          }
+        },
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Нет истории игр"
           }
         }
       }
@@ -128,6 +278,108 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Выбрано"
+          }
+        }
+      }
+    },
+    "Play again" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Play again"
+          }
+        },
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Играть заново"
+          }
+        }
+      }
+    },
+    "Player 1 Name" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Player 1 Name"
+          }
+        },
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Имя 1 игрока"
+          }
+        }
+      }
+    },
+    "Player 2 Name" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Player 2 Name"
+          }
+        },
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Имя 2 игрока"
+          }
+        }
+      }
+    },
+    "Player Style:" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Player Style"
+          }
+        },
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Стиль игры"
+          }
+        }
+      }
+    },
+    "Player X starts by choosing a square (e.g., square 5). Player O follows by choosing an empty square (e.g., square 1). Continue alternating turns until the game ends." : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Player X starts by choosing a square (e.g., square 5). Player O follows by choosing an empty square (e.g., square 1). Continue alternating turns until the game ends."
+          }
+        },
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Игрок X начинает, выбирая клетку (например, клетка 5). Игрок O продолжает, выбирая пустую клетку (например, клетка 1). Продолжайте чередовать ходы, пока игра не закончится."
+          }
+        }
+      }
+    },
+    "Players take turns placing their marker (X or O) in an empty square. To make a move, a player selects a number corresponding to the square where they want to place their marker." : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Players take turns placing their marker (X or O) in an empty square. To make a move, a player selects a number corresponding to the square where they want to place their marker."
+          }
+        },
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Игроки по очереди ставят свои метки (X или O) в пустые клетки. Чтобы сделать ход, игрок выбирает номер, соответствующий клетке, куда он хочет поставить метку."
           }
         }
       }
@@ -183,35 +435,36 @@
         }
       }
     },
-    "Select Music Style:" : {
+    "Select Your Symbol:" : {
+      "extractionState" : "stale",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Select Your Symbol"
+          }
+        },
+        "ru" : {
+          "stringUnit" : {
+            "state" : "needs_review",
+            "value" : "Символ для игры"
+          }
+        }
+      }
+    },
+    "selectGame" : {
       "extractionState" : "manual",
       "localizations" : {
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Select Music Style:"
+            "value" : "Select Game"
           }
         },
         "ru" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Музыкальный стиль"
-          }
-        }
-      }
-    },
-    "Select Your Symbol:" : {
-      "localizations" : {
-        "en" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Select Your Symbol:"
-          }
-        },
-        "ru" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Символ для игры"
+            "value" : "Выберите игру"
           }
         }
       }
@@ -245,7 +498,24 @@
         "ru" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Одиночная игра"
+            "value" : "Один игрок"
+          }
+        }
+      }
+    },
+    "The first player to align three of their markers horizontally, vertically, or diagonally wins.Examples of Winning Combinations: Horizontal: Squares 1, 2, 3 or 4, 5, 6 or 7, 8, 9. Vertical: Squares 1, 4, 7 or 2, 5, 8 or 3, 6, 9.Diagonal: Squares 1, 5, 9 or 3, 5, 7." : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "The first player to align three of their markers horizontally, vertically, or diagonally wins.Examples of Winning Combinations: Horizontal: Squares 1, 2, 3 or 4, 5, 6 or 7, 8, 9. Vertical: Squares 1, 4, 7 or 2, 5, 8 or 3, 6, 9.Diagonal: Squares 1, 5, 9 or 3, 5, 7."
+          }
+        },
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Первый игрок, который выстроит три свои метки по горизонтали, вертикали или диагонали, побеждает. Примеры выигрышных комбинаций: Горизонтально: Клетки 1, 2, 3 или 4, 5, 6 или 7, 8, 9. Вертикально: Клетки 1, 4, 7 или 2, 5, 8 или 3, 6, 9. Диагонально: Клетки 1, 5, 9 или 3, 5, 7\""
           }
         }
       }
@@ -269,6 +539,23 @@
     },
     "Time" : {
       "extractionState" : "stale",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Time"
+          }
+        },
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Время"
+          }
+        }
+      }
+    },
+    "Time:" : {
+      "extractionState" : "manual",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -331,6 +618,23 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Вы"
+          }
+        }
+      }
+    },
+    "You lose!" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "You lose!"
+          }
+        },
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Вы проиграли!"
           }
         }
       }
