--- a/TicTacToe/Managers/Localizations/Localizable.xcstrings
+++ b/TicTacToe/Managers/Localizations/Localizable.xcstrings
@@ -11,6 +11,39 @@
         }
       }
     },
+    "30 sec" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "30 сек"
+          }
+        }
+      }
+    },
+    "60 sec" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "60 сек"
+          }
+        }
+      }
+    },
+    "120 sec" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "120 сек"
+          }
+        }
+      }
+    },
     "AI" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -58,6 +91,17 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Выберите"
+          }
+        }
+      }
+    },
+    "classical" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "классика"
           }
         }
       }
@@ -113,6 +157,28 @@
         }
       }
     },
+    "easy" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "легкий"
+          }
+        }
+      }
+    },
+    "en" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "английский"
+          }
+        }
+      }
+    },
     "Enter your name" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -130,7 +196,18 @@
         }
       }
     },
-    "How to Play" : {
+    "hard" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "тяжелый"
+          }
+        }
+      }
+    },
+    "How to play" : {
       "extractionState" : "manual",
       "localizations" : {
         "en" : {
@@ -143,6 +220,17 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Правила"
+          }
+        }
+      }
+    },
+    "instrumentals" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "инструментальная"
           }
         }
       }
@@ -215,6 +303,17 @@
         }
       }
     },
+    "nature" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "природа"
+          }
+        }
+      }
+    },
     "Next" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -245,6 +344,28 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Нет истории игр"
+          }
+        }
+      }
+    },
+    "none" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "пустое значение"
+          }
+        }
+      }
+    },
+    "normal" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "средний"
           }
         }
       }
@@ -401,6 +522,17 @@
         }
       }
     },
+    "ru" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "русский"
+          }
+        }
+      }
+    },
     "Second Player" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -446,8 +578,8 @@
         },
         "ru" : {
           "stringUnit" : {
-            "state" : "needs_review",
-            "value" : "Символ для игры"
+            "state" : "translated",
+            "value" : "Твой символ "
           }
         }
       }
