--- a/TicTacToe/Managers/Localizations/Localizable.xcstrings
+++ b/TicTacToe/Managers/Localizations/Localizable.xcstrings
@@ -1,6 +1,23 @@
 {
   "sourceLanguage" : "en",
   "strings" : {
+    " Win!" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Win!"
+          }
+        },
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Победил!"
+          }
+        }
+      }
+    },
     "%lld" : {
       "localizations" : {
         "ru" : {
@@ -163,7 +180,7 @@
         "ru" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "легкий"
+            "value" : "легко"
           }
         }
       }
@@ -202,7 +219,7 @@
         "ru" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "тяжелый"
+            "value" : "сложно"
           }
         }
       }
@@ -235,6 +252,9 @@
         }
       }
     },
+    "Key" : {
+      "extractionState" : "manual"
+    },
     "Language:" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -264,7 +284,7 @@
         "ru" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Таблица лидеров"
+            "value" : "Лидерборд"
           }
         }
       }
@@ -326,7 +346,7 @@
         "ru" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Следующий"
+            "value" : "Дальше"
           }
         }
       }
@@ -354,7 +374,7 @@
         "ru" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "пустое значение"
+            "value" : "нет"
           }
         }
       }
@@ -365,7 +385,7 @@
         "ru" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "средний"
+            "value" : "нормально"
           }
         }
       }
@@ -393,7 +413,7 @@
         "ru" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Оk"
+            "value" : "ОК"
           }
         }
       }
@@ -739,23 +759,6 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Предупреждение"
-          }
-        }
-      }
-    },
-    "Win!" : {
-      "extractionState" : "manual",
-      "localizations" : {
-        "en" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Win!"
-          }
-        },
-        "ru" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Победил!"
           }
         }
       }
