--- a/TicTacToe/Managers/Localizations/Localizable.xcstrings
+++ b/TicTacToe/Managers/Localizations/Localizable.xcstrings
@@ -1,6 +1,9 @@
 {
   "sourceLanguage" : "en",
   "strings" : {
+    "" : {
+
+    },
     " Win!" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -17,6 +20,9 @@
           }
         }
       }
+    },
+    "%@" : {
+
     },
     "%lld" : {
       "localizations" : {
@@ -599,23 +605,6 @@
         }
       }
     },
-    "Select Your Symbol:" : {
-      "extractionState" : "stale",
-      "localizations" : {
-        "en" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Select Your Symbol"
-          }
-        },
-        "ru" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Твой символ "
-          }
-        }
-      }
-    },
     "selectGame" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -793,6 +782,23 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Вы проиграли!"
+          }
+        }
+      }
+    },
+    "Your Symbol:" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Your Symbol"
+          }
+        },
+        "ru" : {
+          "stringUnit" : {
+            "state" : "needs_review",
+            "value" : "Твой символ "
           }
         }
       }
