ThemeChangeView, SettingsGameView, SettingsViewModel made changes

--- a/TicTacToe/Managers/Localizations/Localizable.xcstrings
+++ b/TicTacToe/Managers/Localizations/Localizable.xcstrings
@@ -153,6 +153,9 @@
         }
       }
     },
+    "Choose Mode" : {
+
+    },
     "classical" : {
       "extractionState" : "manual",
       "localizations" : {
